I created the fragment "EditStoreFragment".

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,9 @@
     <string name="app_name">Tiendas</string>
     <string name="description_img_photo">Imagen de la tienda</string>
     <string name="description_strore_add">Botón para añadir una tienda nueva</string>
+    <string name="string_guardar">Guardar</string>
+    <string name="nombre_de_la_tienda">Nombre de la tienda</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
