--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,6 @@
     <string name="helper_required">Requerido</string>
     <string name="hint_phone">Introducir teléfono</string>
     <string name="hint_photo_url">url de la imagen</string>
+    <string name="edit_store_title_add">Crear tienda</string>
 
 </resources>
