--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,6 @@
     <string name="hint_phone">Introducir teléfono</string>
     <string name="hint_photo_url">url de la imagen</string>
     <string name="edit_store_title_add">Crear tienda</string>
+    <string name="menu_save">Guardar</string>
 
 </resources>
